add: logo, favicon e configuração de ícones

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Rômulo Monte - Senior Product Designer especializado em UX, UI e experiência digital">
     <meta name="author" content="Rômulo Monte">
     <title>Rômulo Monte - Senior Product Designer</title>
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/logo.png">
     
     <style>
         /* ========== RESET E VARIÁVEIS ========== */
